--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :semester_id %>
   </div>
 
+  <div class=field">
+    <%= form.label :student_id %><br>
+    <%= form.collection_check_boxes(:student_ids, @students, :id, :name) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
