--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.number_field :student_number %>
   </div>
 
+  <div class="field">
+    <%= form.label :section_id %><br>
+    <%= form.collection_check_boxes(:section_ids, @sections, :id, :id) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
