--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -20,5 +20,15 @@
   <%= @section.semester_id %>
 </p>
 
+<p>
+  <strong>Students:</strong>
+</p>
+
+<ul>
+  <%= @section.students.each do [student] %>
+  <li> <%= student.name %></li>
+    <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_section_path(@section) %> |
 <%= link_to 'Back', sections_path %>
