--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -3,6 +3,14 @@
 <h1>Semesters</h1>
 
 <table>
+  <%= def search_departments_url
+             # code here
+      end
+      form_tag(search_departments_url, method: "get") do  %>
+    <%= label_tag(:name, "Search for a Student: ") %>
+    <%= text_field_tag(:name) %>
+    <%= submit_tag("Search") %>
+  <% end %>
   <thead>
     <tr>
       <th>Semester</th>
