--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,6 +3,14 @@
 <h1>Students</h1>
 
 <table>
+  <%= def search_students_url
+        # code here
+      end
+      form_tag(search_students_url, method: "get") do  %>
+    <%= label_tag(:name, "Search for a Student: ") %>
+    <%= text_field_tag(:name) %>
+    <%= submit_tag("Search") %>
+  <% end %>
   <thead>
     <tr>
       <th>Name</th>
